[package]
name = "whirlpool"
version = "0.3.1"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.29"
anchor-spl = { version = "0.29", features = ["metadata", "memo"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.5.0"
solana-program = "1.18"
thiserror = "1.0"
uint = { version = "0.9.1", default-features = false }
borsh = "0.10"
arrayref = "0.3.7"
bytemuck = "1.14.3"
solana-security-txt = { version = "=1.1.1" }

[dev-dependencies]
proptest = "=1.5.0"
serde = "=1.0.206"
serde_json = "=1.0.124"

[dev-dependencies.serde_with]
version = "=2.3.3"
features = ["json"]
