[package]
name = "whirlpool"
version = "0.3.2"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["metadata", "memo"] }
spl-token = { version = ">=6", features = ["no-entrypoint"] }
spl-transfer-hook-interface = { version = ">=0.8" }
spl-token-metadata-interface = { version = ">=0.5" }
solana-program = "2"
thiserror = "1.0"
uint = { version = "0.9.5", default-features = false }
borsh = "0.10"
arrayref = "0.3.8"
solana-security-txt = { version = "=1.1.1" }
bytemuck = { version = "1.16.3", features = ["derive", "min_const_generics"] }

[dev-dependencies]
proptest = "1.5"
serde = "1.0"
serde_json = "1.0"
